# dual-calculus

./: CallByName.hs  CallByNeed.hs  CallByValue.hs  Core.hs  Duality.hs  Ids.hs  LambdaCalculus.hs  Main.hs  Substitution.hs  Syntax.hs  Test.hs  Utilities.hs  dual-calculus.cabal
CallByName/: CPS.hs  Evaluate.hs
CallByNeed/: Evaluate.hs
CallByValue/: CPS.hs  Evaluate.hs
